apps/components/frontend/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - name: kgateway
      namespace: kgateway
  hostnames:
    - ${HOST}
  rules:
    - backendRefs:
        - name: frontend
          port: 8080
